# ygod_core

./: Cargo.toml
src/: lib.rs
src/ext_data/cardinfo/: mod.rs
src/ext_data/cardsets/: eval.rs  mod.rs
src/ext_data/image_dl/: cards.rs
src/ext_data/image_dl/status_update/: mod.rs
src/ext_data/vercheck/: mod.rs
src/user_data/: mod.rs
src/user_data/collection/: action.rs  card.rs  change.rs  collection.rs  collection_builder.rs  draft_type.rs  meta_data.rs  mod.rs
src/user_data/collection/draft_box/: mod.rs
src/user_data/collection/draft_settings/: battle_pack_settings.rs  choice_settings.rs  mod.rs
src/user_data/progressive_collection/: mod.rs
src/utils/: cache.rs  http.rs
src/utils/card_gen/: mod.rs  tests.rs
tests/: http_test.rs
