[package]
name = "ygod_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
chrono = "0.4"
crossbeam-channel = "0.5"
directories = "4.0"
once_cell = "1.15.0"
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["blocking", "json"] }
scraper = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
