[package]
name = "ygod_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
chrono = "0.4"
directories = "4.0"
once_cell = "1.17"
rand = "0.8"
regex = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
